# temple

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  list.rs  main.rs  template.rs
